# TCPchat

./: CMakeLists.txt  README.md
TCP/: CMakeLists.txt  TCP.sln
TCP/TCP/: TCP.vcxproj  server.cpp
TCP/TCP/x64/Debug/: TCP.exe.recipe  TCP.ilk  vc143.idb
TCP/TCP/x64/Debug/TCP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TCP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TCP_cli/: CMakeLists.txt  TCP_cli.sln
TCP_cli/TCP_cli/: TCP_cli.vcxproj  client.cpp
TCP_cli/TCP_cli/x64/Debug/: TCP_cli.exe.recipe  TCP_cli.ilk  vc143.idb
TCP_cli/TCP_cli/x64/Debug/TCP_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TCP_cli.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
